--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -70,6 +72,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-ulbi-tv-plugin": "^0.0.1",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
