--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@storybook/addon-links": "^6.4.19",
     "@storybook/builder-webpack5": "^6.4.19",
     "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/react": "^7.6.14",
     "@storybook/testing-library": "^0.0.9",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
@@ -76,7 +76,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-ulbi-tv-plugin": "^0.0.2",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-ulbi-tv-plugin": "^0.0.3",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.0",
@@ -85,10 +86,10 @@
     "jest": "^27.5.1",
     "jest-html-reporters": "^3.0.10",
     "json-server": "^0.17.0",
-    "loki": "^0.28.1",
+    "loki": "^0.34.0",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.12.0",
-    "reg-cli": "^0.17.6",
+    "reg-cli": "^0.18.0",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
@@ -111,7 +112,7 @@
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.8.0",
     "@use-gesture/react": "^10.3.0",
-    "axios": "^0.26.1",
+    "axios": "^1.6.7",
     "concurrently": "^7.0.0",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.3",
