--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "storybook:build": "build-storybook -c ./config/storybook",
     "prepare": "husky install",
     "generate:slice": "node ./scripts/createSlice/index.js",
+    "postinstall": "node ./scripts/clear-cache.js",
     "ts-node": "ts-node ./scripts/refactoring/createPublicApiForSharedUi.ts"
   },
   "keywords": [],
