--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "postinstall": "node ./scripts/clear-cache.js",
     "ts-node": "ts-node ./scripts/refactoring/createPublicApiForSharedUi.ts"
   },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "eslint"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -88,6 +91,7 @@
     "jest": "^27.5.1",
     "jest-html-reporters": "^3.0.10",
     "json-server": "^0.17.0",
+    "lint-staged": "^15.2.2",
     "loki": "^0.34.0",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.12.0",
