--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "webpack serve --env port=3000",
     "dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
     "vite": "vite",
-    "dev:vite": "concurrently \"npm run vite\" \"npm run start:dev:server\"",
-    "start:dev:server": "node ./json-server/index.js",
+    "dev:vite": "concurrently \"npm run vite\" \"npm run dev:server\"",
+    "dev:server": "node ./json-server/index.js",
     "build:prod": "webpack  --env mode=production apiUrl=https://production-project-server.vercel.app",
     "build:dev": "webpack  --env mode=development",
-    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
     "prettier": "npx prettier --write **/*.{ts,tsx,json}",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
